Laravel add ignore

--- a/example-app/.gitignore
+++ b/example-app/.gitignore
@@ -17,3 +17,14 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+/public/uploads/eM0vU1H5YNPV79SfOvyU1ozm7wcESvgPJWBE3BXb.jpg
+/public/uploads/GSIch9sprVNX6mcczlHRYqXATKoTb0WMDH9mdsMU.jpg
+/public/uploads/IiUDwsF04KqzSOV5dTomRL517NeGTYitKRVYhMC4.jpg
+/public/uploads/image.jpg
+/public/uploads/image2.jpg
+/public/uploads/jsYyIJcrc3AoHlPngOk4vIYqTparvLifjpfzeUn2.jpg
+/public/uploads/kcKvfEOLMPYCc9rVGQiisHpQZAL409WRnYZi5Fgs.jpg
+/public/uploads/tVrfgpUWhSlKjaSdlXpEQu6J1gI2UoiK0IXcgWif.jpg
+/public/uploads/tw2KIcYZc4MMGkhdPqgxIw4q1N9SqJf4Qe2uuCM2.jpg
+/public/uploads/UnaDJ23LWllRdk5ThjMoD7BGLTFXPdGpNPMOc99a.jpg
+/public/uploads/yyjRQ5ZakFw8nJ4GQEUipP9lGhJSarrXw6SOSjEY.jpg
